--- a/style.css
+++ b/style.css
@@ -10,18 +10,20 @@ body{
 }
 .container{
     height: 100vh;
-    background: #F0F4F4;
+    background: #ffffff;
     display:flex;
 }
 .content1{
+    overflow: visible;
     width: 1573px;
-    background-color: #FFFFFF;
+    background-color: #F0F4F4;
     flex-grow: 2;
-    margin: 300px 0 0 0;
+    margin: 200px 0 0 0;
     border-top-right-radius: 50px;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    gap: 30px;
+    
 }
 .logo{
     width: 200px;
@@ -29,6 +31,7 @@ body{
 }
 .header{
     width: 400px;
+    
 }
 .board{
     width: 500px;
@@ -37,15 +40,15 @@ body{
     border-top-right-radius: 15px;
     border-left: 5px solid #000;
     border-right: 5px solid #000;
-    margin: 80px 0 0 0;
+    margin: 30px 0 0 0;
     background-color: #d5e1ef;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .qr-tittle{
-    font-size: 8px;
-    margin: 5px;
+    font-size: 12px;
+    margin: 10px;
     color: #000000;
 }
 .qr-text{
@@ -109,6 +112,7 @@ body{
     margin: 10px;
 }
 h1{
+    margin: 0px 0 0 0;
     color:#3e54a3
 }
 h2{
@@ -125,10 +129,7 @@ h2{
     margin: 20px 0;
 }
 .logo{
-position: fixed;
-top: 30%;
-left: 18%;
 width: 120px;
 height: 120px;
-
+margin: -50px 0 0 0;
 }
