--- a/style.css
+++ b/style.css
@@ -31,23 +31,23 @@ body{
 }
 .header{
     width: 400px;
-    
+    margin: 0 0 0 50px
 }
 .board{
-    width: 500px;
+    width: 400px;
     border-top: 20px solid #000;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     border-left: 5px solid #000;
     border-right: 5px solid #000;
-    margin: 30px 0 0 0;
+    margin: 80px 0 0 50px;
     background-color: #d5e1ef;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 .qr-tittle{
-    font-size: 12px;
+    font-size: 8px;
     margin: 10px;
     color: #000000;
 }
@@ -62,7 +62,7 @@ body{
 }
 .qr-code-container{
   background-color: #fff;
-  width: 80px;
+  width: 120px;
   display: flex;
   align-items: center;
   justify-content: center;
