--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
+@font-face {
+    font-family: 'Poppins';
+    src: url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap') format('woff2');
+}
 body{
+    font-family: 'Poppins', sans-serif;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
     margin: 0;
     padding: 0;
     background-color: #D5E1EF
@@ -27,6 +36,9 @@ p{
     text-align: center;
     margin: 0;
     font-size: 16px;
-    color: #1F314F;
-    padding: 0 16px;
+    color: #68778D;
+    padding:  16px;
+}
+.content{
+    margin: 16px;
 }
